# opendeck-m18

./: Cargo.toml  README.md  justfile  manifest.json
property_inspector/: set_led_color.html
src/: device.rs  main.rs
